# ghostwarden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PACKAGING_COMPLETE.md  README.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  SECURITY.md  build.zig  build.zig.zon  ghostwarden.toml.example
crates/gw-cli/: Cargo.toml
crates/gw-cli/src/: main.rs
crates/gw-core/: Cargo.toml
crates/gw-core/src/: config_format.rs  conflict.rs  detector.rs  docker.rs  executor.rs  lib.rs  planner.rs  policy.rs  profile_loader.rs  rollback.rs  state.rs  status.rs  topology.rs  validator.rs
crates/gw-core/tests/: config_formats.rs  policy_profiles.rs
crates/gw-dhcpdns/: Cargo.toml
crates/gw-dhcpdns/src/: dnsmasq.rs  leases.rs  lib.rs
crates/gw-libvirt/: Cargo.toml
crates/gw-libvirt/src/: lib.rs
crates/gw-metrics/: Cargo.toml
crates/gw-metrics/src/: lib.rs
crates/gw-nft/: Cargo.toml
crates/gw-nft/src/: lib.rs  ruleset.rs  status.rs  table.rs
crates/gw-nft/tests/: netns_nft.rs
crates/gw-nl/: Cargo.toml
crates/gw-nl/src/: addr.rs  bridge.rs  lib.rs  status.rs  vlan.rs
crates/gw-nl/tests/: netns_live.rs
crates/gw-troubleshoot/: Cargo.toml
crates/gw-troubleshoot/src/: bridge.rs  diagnostics.rs  docker.rs  lib.rs  nftables.rs
crates/gw-tui/: Cargo.toml
crates/gw-tui/src/: lib.rs
docs/: DOCTOR_EXAMPLES.md  PRODUCTION-READINESS.md  README.md  TROUBLESHOOTING.md  TROUBLESHOOTING_SUMMARY.md
docs/architecture/: README.md  diagrams.md  overview.md  planner.md  rollback.md
docs/getting-started/: README.md  configuration.md  installation.md  quick-start.md
docs/guides/: arch-installation.md  proxmox-integration.md
docs/integrations/: README.md  crowdsec.md  docker.md  libvirt.md  proxmox.md  wazuh.md
docs/operations/: README.md  observability.md  production-readiness.md  release-packaging.md
docs/reference/: README.md  commands.md  nftables.md  policy-profiles.md  topology-format.md
docs/security/: README.md  policy-hardening.md  threat-model.md
docs/troubleshooting/: README.md  common-issues.md  doctor.md  support-capture.md
examples/: ghostnet.toml  ghostnet.yaml
examples/policies/: l2-lan.toml  l2-lan.yaml  public-web.toml  public-web.yaml  routed-tight.toml  routed-tight.yaml
monitoring/: docker-compose.yml  ghostwarden_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: ghostwarden.json
packaging/: README.md  install.sh
packaging/aur/: .SRCINFO  PKGBUILD  ghostwarden.install
packaging/configs/: daemon.toml
packaging/systemd/: gwarden-metrics.service  gwarden.service
release/: README.md  install.sh
release/aur/: .SRCINFO  PKGBUILD  ghostwarden.install
release/completions/: gwarden.bash  gwarden.gsh  gwarden.zsh
release/configs/: daemon.toml
release/man/: gwarden-doctor.1  gwarden-forward.1  gwarden-graph.1  gwarden-metrics.1  gwarden-net.1  gwarden-policy.1  gwarden-vm.1  gwarden.1
release/systemd/: gwarden-metrics.service  gwarden.service
src/: config.zig  crowdsec.zig  daemon.zig  http.zig  main.zig  metrics.zig  nftables.zig  proxmox.zig  root.zig  wazuh.zig
