[package]
name = "gw-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
yaml_serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
