[package]
name = "gw-nft"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gw-core = { path = "../gw-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ipnet = "2"
similar.workspace = true
