[package]
name = "gw-troubleshoot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Netlink for interface inspection
rtnetlink.workspace = true
netlink-packet-route.workspace = true

# For running system commands
regex = "1"
